--- a/styles/style.css
+++ b/styles/style.css
@@ -95,3 +95,35 @@ footer {
     text-align: center;
     padding: 10px 0;
 }
+
+/* ナビゲーションバーのスタイル */
+.navbar {
+    overflow: hidden;
+    background-color: #333;
+}
+
+.navbar a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 20px;
+    text-decoration: none;
+}
+
+.navbar a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.navbar a.active {
+    background-color: #4CAF50;
+    color: white;
+}
+
+.profileimage img { width: 30%;}
+
+.member-divider {
+    border-top: 1px solid #ccc;
+    margin: 20px 0;
+}
