add main contents without how-to-img

--- a/client/src/components/MainText.css
+++ b/client/src/components/MainText.css
@@ -1,8 +1,6 @@
-.main-contents{
-    max-width: 1120px;
-    margin: 100vh auto 0 auto;
-}
-
-.body{
-    font-size: 16px;
+.main-text{
+    max-width: 1000px;
+    margin: calc(100vh) auto 0 auto;
+    background-color: #f1f1f1;
+    padding: 20px calc(50% - 500px);
 }
