--- a/client/src/components/MainContents.css
+++ b/client/src/components/MainContents.css
@@ -35,11 +35,10 @@
 
 .how-to-text{
     text-align: center;
-    margin-bottom: 20px;
 }
 
 .bottom-button{
-    margin: 20px auto 0 auto;
+    margin: 20px auto 10px auto;
     display: block;
 }
 
@@ -53,4 +52,11 @@
     text-align: center;
     max-width: 300px;
     margin: 0 25px;
+}
+
+.how-to-img{
+    width: 1000px;
+    height: 300px;
+    background-image: url("../../img/how-to-img.png");
+    background-size: cover;
 }
