--- a/client/src/components/MainContents.css
+++ b/client/src/components/MainContents.css
@@ -37,11 +37,6 @@
     text-align: center;
 }
 
-.bottom-button{
-    margin: 20px auto 10px auto;
-    display: block;
-}
-
 .flex-text{
     margin: 0 10px;
     display: flex;
@@ -59,4 +54,9 @@
     height: 300px;
     background-image: url("../../img/how-to-img.png");
     background-size: cover;
+}
+
+.bottom-button{
+    margin: 20px auto 10px auto;
+    text-align: center;
 }
