--- a/client/src/styles/Header.css
+++ b/client/src/styles/Header.css
@@ -11,7 +11,7 @@
     right: 0;
     padding-left: calc((100% - 1000px) / 2);
     padding-right: calc((100% - 1000px) / 2);
-    background-color: white;
+    background-color: #f8fbff;
     z-index: 1000;
 }
 
