--- a/client/src/styles/TopBar.css
+++ b/client/src/styles/TopBar.css
@@ -3,7 +3,7 @@
     top: 64px;
     width: 100%;
     height: 450px;
-    background-image: url("../../img/topBar.jpg");
+    background-image: url("../../img/topBar2.jpg");
     background-position: center;
 }
 
