responsible is done

--- a/client/src/styles/MainContentsSp.css
+++ b/client/src/styles/MainContentsSp.css
@@ -18,3 +18,12 @@
 .main-text-button-sp{
     margin: auto;
 }
+
+.how-to-sp{
+    margin-top: 48px;
+    text-align: center;
+}
+
+.p-text-sp{
+    margin: 12px 12px 0 12px;
+}
