--- a/client/src/styles/AdvisorCardSp.css
+++ b/client/src/styles/AdvisorCardSp.css
@@ -5,17 +5,9 @@
     margin: 24px auto 0 auto;
 }
 
-.profile-img{
-    height: 300px;
-    width: 300px;
-    margin: 0 auto 12px auto;
-    background-size: cover;
-    background-image: url("https://placehold.jp/300x300.png");
-}
-
 .advisor-profile-sp{
     max-width: 350px;
-    margin-left: 16px;
+    margin: 5px 0 5px 0;
     overflow-wrap: break-word;
 }
 
